samples/_failures_safe/1761509265_dae4f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52e6026d.c: In function ‘main’:
./samples/SAFE/__tmp_52e6026d.c:161:5: error: expected expression at end of input
  161 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_52e6026d.c:161:5: error: expected declaration or statement at end of input
